# cpluplus_project

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md  Resource.h  WXf1.cpp  WXf1.vcxproj  WXf1.vcxproj.filters
Config/: Dados.db
WXf1/Debug/: vc145.idb
WXf1/Debug/WXf1.tlog/: WXf1.lastbuildstate
x64/Debug/: WXf1.exe.recipe  vc145.idb  wxf1.obj.enc
x64/Debug/WXf1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WXf1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
